--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,27 +2,27 @@
     <ion-split-pane contentId="menu-content">
         <ion-menu contentId="menu-content">
             <ion-header>
-                <ion-toolbar color="danger">
-                    <ion-item *ngIf="!authenticated" color="danger">
-                        <ion-avatar color="danger" slot="start">
+                <ion-toolbar >
+                    <ion-item *ngIf="!authenticated" >
+                        <ion-avatar  slot="start">
                             <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"
                                 alt="https://cdn2.iconfinder.com/data/icons/scenarium-vol-4/128/002_avatar_man_profile_account_user_male-128.png">
                         </ion-avatar>
-                        <ion-label>Jorge Beneyto Castelló</ion-label>
+                        <ion-label>Stylecoffee</ion-label>
                     </ion-item>
-                    <ion-item *ngIf="authenticated" color="danger" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="/profile">
-                        <ion-avatar color="danger" slot="start">
+                    <ion-item *ngIf="authenticated"  routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="/profile">
+                        <ion-avatar  slot="start">
                             <img [src]="currentUser.avatar" *ngIf="currentUser.avatar"
                                 alt="https://cdn2.iconfinder.com/data/icons/scenarium-vol-4/128/002_avatar_man_profile_account_user_male-128.png">
                         </ion-avatar>
-                        <ion-label>{{ currentUser.usuario }}</ion-label>
+                        <ion-label>{{ currentUser.usuario }}</ion-label><br>
+                        <ion-label>{{ currentUser.email }}</ion-label>
                     </ion-item>
-
                 </ion-toolbar>
             </ion-header>
             <ion-content>
                 <ion-list color="medium">
-                    <ion-menu-toggle color="danger" *ngIf="!authenticated"  auto-hide="false">
+                    <ion-menu-toggle  *ngIf="!authenticated"  auto-hide="false">
                         <ion-item-divider [routerDirection]="'root'" routerLink="/tabs">
                             <ion-icon slot="start" name="home"></ion-icon>
                             <ion-label>
@@ -42,7 +42,7 @@
                             </ion-label>
                         </ion-item-divider>
                     </ion-menu-toggle>
-                    <ion-menu-toggle color="danger" *ngIf="authenticated" auto-hide="false">
+                    <ion-menu-toggle  *ngIf="authenticated" auto-hide="false">
                         <ion-item-divider [routerDirection]="'root'" routerLink="/tabs">
                             <ion-icon slot="start" name="home"></ion-icon>
                             <ion-label>
@@ -53,12 +53,6 @@
                             <ion-icon slot="start" name="person"></ion-icon>
                             <ion-label>
                                 card
-                            </ion-label>
-                        </ion-item-divider>
-                        <ion-item-divider onclick="logout()">
-                            <ion-icon slot="start" name="settings"></ion-icon>
-                            <ion-label>
-                                logout
                             </ion-label>
                         </ion-item-divider>
                     </ion-menu-toggle>
