--- a/src/app/collections/collections.component.html
+++ b/src/app/collections/collections.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="danger">
+  <ion-toolbar >
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
@@ -13,7 +13,7 @@
 </ion-header>
 <ion-content>
   <p>
-    card-list works!
+    collections works!
   </p>
 </ion-content>
 
