--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="danger">
+  <ion-toolbar >
     <ion-buttons slot="start">
       <ion-button (click)="dismiss()">Cancel</ion-button>
     </ion-buttons>
