--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -1,8 +1,8 @@
 <ion-menu contentId="menu-content">
         <ion-header>
-            <ion-toolbar color="danger">
+            <ion-toolbar >
                 <ion-item routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="/profile">
-                    <ion-avatar color="danger" slot="start">
+                    <ion-avatar  slot="start">
                         <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"
                             alt="https://cdn2.iconfinder.com/data/icons/scenarium-vol-4/128/002_avatar_man_profile_account_user_male-128.png">
                     </ion-avatar>
@@ -13,7 +13,7 @@
         <ion-content>
     
             <ion-list color="medium">
-                <ion-menu-toggle color="danger" auto-hide="false" *ngFor="let p of appPages">
+                <ion-menu-toggle  auto-hide="false" *ngFor="let p of appPages">
                     <ion-item-divider [routerDirection]="'root'" [routerLink]="[p.url]">
                         <ion-icon slot="start" [name]="p.icon"></ion-icon>
                         <ion-label>
