--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,27 +1,38 @@
 <ion-header>
-  <ion-toolbar color="danger">
+  <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-nav-pop>
-      <ion-title> StyleCoffee </ion-title>
-    </ion-nav-pop>
+    <ion-title>Stylecoffee</ion-title>
     <ion-segment>
       <ion-segment-button value="all" (click)="setab(1)">
         <ion-icon name="bookmarks"></ion-icon>
-        <ion-label>Books</ion-label>
       </ion-segment-button>
       <ion-segment-button value="favorites" (click)="setab(2)">
         <ion-icon name="cafe"></ion-icon>
-        <ion-label>Coffees</ion-label>
       </ion-segment-button>
     </ion-segment>
     <ion-buttons slot="end">
-      <ion-button routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
-      routerLink="/filter" >
-        <ion-icon slot="icon-only" name="options"></ion-icon>
+      <ion-button routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="/filter">
+        <ion-icon slot="icon-only" name="search"></ion-icon>
       </ion-button>
     </ion-buttons>
+    <ion-item *ngIf="authenticated" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
+      [routerLink]="['/profile', currentUser.usuario]">
+      <ion-avatar slot="start">
+        <img [src]="currentUser.avatar" *ngIf="currentUser.avatar"
+          alt="https://cdn2.iconfinder.com/data/icons/scenarium-vol-4/128/002_avatar_man_profile_account_user_male-128.png">
+      </ion-avatar>
+    </ion-item>
+    <ion-avatar *ngIf="!authenticated" slot="end">
+      <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"
+        alt="https://cdn2.iconfinder.com/data/icons/scenarium-vol-4/128/002_avatar_man_profile_account_user_male-128.png">
+    </ion-avatar>
+    <ion-avatar slot="start" slot="end" *ngIf="authenticated" routerLinkActive="active"
+      [routerLinkActiveOptions]="{ exact: true }" [routerLink]="['/profile', currentUser.usuario]">
+      <img [src]="currentUser.avatar"
+        alt="https://cdn2.iconfinder.com/data/icons/scenarium-vol-4/128/002_avatar_man_profile_account_user_male-128.png">
+    </ion-avatar>
   </ion-toolbar>
 </ion-header>
 <ion-content>
@@ -29,33 +40,47 @@
     <ion-row *ngFor="let info of infos; let i of index" [ngStyle]="{'width': 320, 'height': 510}"
       routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="/details/{{info.id}}">
       <ion-col>
-        <ion-img width="auto" height="350px" src="{{info.image}}" alt="{{info.displayName}}"></ion-img>
-        <ion-buttons slot="start">
-          <ion-icon name="heart" [color]="color" (click)="clickEventHandler($event.target)"></ion-icon>
-        </ion-buttons>
-        <ion-title routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
-          routerLink="/details/{{info.id}}">{{info.displayName}}</ion-title>
-        <ion-buttons slot="end">
-          <ion-icon name="archive" [color]="colorSecundary" (click)="clickEventHandlerSave($event.target)"></ion-icon>
-        </ion-buttons>
+        <ion-list>
+          <ion-item>
+            <ion-img width="auto" height="350px" src="{{info.image}}" alt="{{info.displayName}}"></ion-img>
+          </ion-item>
+          <ion-item>
+            <ion-buttons slot="start">
+              <ion-icon name="heart" [color]="color" (click)="clickEventHandler($event.target)"></ion-icon>
+            </ion-buttons>
+            <ion-title routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
+              routerLink="/details/{{info.id}}">{{info.displayName}}</ion-title>
+            <ion-buttons slot="end">
+              <ion-icon name="archive" [color]="colorSecundary" (click)="clickEventHandlerSave($event.target)">
+              </ion-icon>
+            </ion-buttons>
+          </ion-item>
+        </ion-list>
       </ion-col>
     </ion-row>
   </ion-grid>
-  <ion-grid *ngIf="tab_active === 2" >
-    <ion-row *ngFor="let info of coffees" [ngStyle]="{'width': 320, 'height': 510}"
-    routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="/coffeedetails/{{info.id}}">
+  <ion-grid *ngIf="tab_active === 2">
+    <ion-row *ngFor="let info of coffees" [ngStyle]="{'width': 320, 'height': 510}" routerLinkActive="active"
+      [routerLinkActiveOptions]="{ exact: true }" routerLink="/coffeedetails/{{info.id}}">
       <ion-col>
-        <ion-img width="auto" height="350px" src="{{info.image}}" alt="{{info.displayName}}"></ion-img>
-        <ion-buttons slot="start">
-          <ion-icon name="heart" [color]="color" (click)="clickEventHandler($event.target)"></ion-icon>
-        </ion-buttons>
+        <ion-list>
+          <ion-item>
+            <ion-img width="auto" height="350px" src="{{info.image}}" alt="{{info.displayName}}"></ion-img>
+          </ion-item>
+          <ion-item>
+            <ion-buttons slot="start">
+              <ion-icon name="heart" [color]="color" (click)="clickEventHandler($event.target)"></ion-icon>
+            </ion-buttons>
 
-        <ion-title routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
-          routerLink="/coffeedetails/{{info.id}}">{{info.name}}</ion-title>
-        <ion-buttons slot="end">
-          <ion-icon name="archive" [color]="colorSecundary" (click)="clickEventHandlerSave($event.target)"></ion-icon>
-        </ion-buttons>
+            <ion-title routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
+              routerLink="/coffeedetails/{{info.id}}">{{info.name}}</ion-title>
+            <ion-buttons slot="end">
+              <ion-icon name="archive" [color]="colorSecundary" (click)="clickEventHandlerSave($event.target)">
+              </ion-icon>
+            </ion-buttons>
+          </ion-item>
+          </ion-list>
       </ion-col>
     </ion-row>
-  </ion-grid> 
+  </ion-grid>
 </ion-content>
