--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,12 +1,30 @@
 <ion-tabs>
-  <ion-tab-bar color="danger" slot="start">
+  <ion-tab-bar  slot="start" *ngIf="!auth">
     <ion-tab-button tab="tab1">
       <ion-icon name="home"></ion-icon>
       <ion-label>Pagina principal</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="tab3">
+      <ion-icon name="calendar"></ion-icon>
+      <ion-label>Eventos</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
+  <ion-tab-bar slot="start" *ngIf="auth">
+    <ion-tab-button routerLink="/cardlist">
       <ion-icon name="heart"></ion-icon>
       <ion-label>Favoritos</ion-label>
+    </ion-tab-button>
+    <ion-tab-button routerLink="/collections">
+      <ion-icon name="journal"></ion-icon>
+      <ion-label>Coleciones</ion-label>
+    </ion-tab-button>
+    <ion-tab-button routerLink="/reserves">
+      <ion-icon name="bookmarks"></ion-icon>
+      <ion-label>Reservas</ion-label>
+    </ion-tab-button>
+    <ion-tab-button routerLink="/events">
+      <ion-icon name="calendar"></ion-icon>
+      <ion-label>Eventos</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
