--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -6,9 +6,15 @@
 <ion-content>
   <ion-list>
     <ion-item>
-      <ion-ripple-effect>
-        
-      </ion-ripple-effect>
+        <ion-badge color="primary">11</ion-badge>
+        <ion-badge color="secondary">22</ion-badge>
+        <ion-badge color="tertiary">33</ion-badge>
+        <ion-badge color="success">44</ion-badge>
+        <ion-badge color="warning">55</ion-badge>
+        <ion-badge color="danger">66</ion-badge>
+        <ion-badge color="light">77</ion-badge>
+        <ion-badge color="medium">88</ion-badge>
+        <ion-badge color="dark">99</ion-badge>
     </ion-item>
   </ion-list>
 </ion-content>
