--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -10,7 +10,7 @@
     </ion-tab-button>
   </ion-tab-bar>
   <ion-tab-bar slot="start" *ngIf="auth">
-    <ion-tab-button routerLink="/cardlist">
+    <ion-tab-button routerLink="/list">
       <ion-icon name="heart"></ion-icon>
       <ion-label>Favoritos</ion-label>
     </ion-tab-button>
