--- a/src/app/collections/collections.component.html
+++ b/src/app/collections/collections.component.html
@@ -12,8 +12,18 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <p>
-    collections works!
-  </p>
+    <ion-item-sliding *ngFor="let collection of collections" >
+        <ion-item-options side="start">
+          <ion-item-option (click)="delete(collection)">Favorite</ion-item-option>
+        </ion-item-options>
+    
+        <ion-item>
+          <ion-label>{{collection.name}}</ion-label>
+        </ion-item>
+    
+        <ion-item-options side="end">
+          <ion-item-option (click)="delete(collection.id)">Unread</ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
 </ion-content>
 
