--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -31,7 +31,23 @@
 
 </ion-header>
 <ion-content>
-  <ion-grid *ngIf="tab_active === 'book'">
+    <ion-grid *ngIf="!contentavaible">
+        <ion-row>
+            <ion-col>
+            <ion-item>
+                <ion-icon *ngIf="tab_active === 'book'"  name="bookmarks" text-center ></ion-icon>
+                <ion-icon *ngIf="tab_active === 'coffee'" name="cafe"text-center ></ion-icon>
+                <ion-text text-center >No hay {{tab_active}} disponibles!!!</ion-text>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+
+  <ion-grid *ngIf=" contentavaible &&  tab_active === 'book'">
+      <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+          <ion-refresher-content></ion-refresher-content>
+        </ion-refresher>
+    <app-filter></app-filter>
     <ion-row *ngFor="let info of infos; let i of index" [ngStyle]="{'width': 320, 'height': 510}"
       routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="/details/{{info.id}}">
       <ion-col>
@@ -39,11 +55,11 @@
           <ion-item>
             <ion-img width="auto" height="350px" src="{{info.image}}" alt="{{info.displayName}}"></ion-img>
           </ion-item>
-          <ion-item>
+          <ion-item *ngIf="authenticated">
             <ion-buttons slot="start">
-              <ion-icon name="heart" [color]="color" (click)="clickEventHandler($event.target)"></ion-icon>
+              <ion-icon name="heart" id="{{info.id}}" [color]="color" (click)="clickEventHandler($event.target)"></ion-icon>
             </ion-buttons>
-            <ion-title routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
+            <ion-title routerLinkActive="active" id="{{info.id}}" [routerLinkActiveOptions]="{ exact: true }"
               routerLink="/details/{{info.id}}">{{info.displayName}}</ion-title>
             <ion-buttons slot="end">
               <ion-icon name="archive" [color]="colorSecundary" (click)="clickEventHandlerSave($event.target)">
@@ -55,7 +71,11 @@
     </ion-row>
   </ion-grid>
 
-  <ion-grid *ngIf="tab_active === 'coffee'">
+  <ion-grid *ngIf="contentavaible && tab_active === 'coffee'">
+    <app-filter></app-filter>
+    <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content></ion-refresher-content>
+      </ion-refresher>
     <ion-row *ngFor="let info of coffees" [ngStyle]="{'width': 320, 'height': 510}" routerLinkActive="active"
       [routerLinkActiveOptions]="{ exact: true }" routerLink="/coffeedetails/{{info.id}}">
       <ion-col>
@@ -63,7 +83,7 @@
           <ion-item>
             <ion-img width="auto" height="350px" src="{{info.image}}" alt="{{info.displayName}}"></ion-img>
           </ion-item>
-          <ion-item>
+          <ion-item *ngIf="authenticated">
             <ion-buttons slot="start">
               <ion-icon name="heart" [color]="color" (click)="clickEventHandler($event.target)"></ion-icon>
             </ion-buttons>
@@ -78,5 +98,6 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+
 
 </ion-content>
